Styling is finished. A few of the UX handlers are in place. Time to start with them in earnest.
Signed-off-by: J. Renée Beach <splendidnoise@gmail.com>

--- a/index.html
+++ b/index.html
@@ -13,24 +13,26 @@
 
 <body>
   <!-- Main container -->
-  <div class="calculator">
-		<div class="input"></div>
-		<div class="numpad">
-			<a>1</a>
-			<a>2</a>
-			<a>3</a>
-			<a>4</a>
-			<a>5</a>
-			<a>6</a>
-			<a>7</a>
-			<a>8</a>
-			<a>9</a>
+  <div class="calculator clearfix">
+		<input type="text" placeholder="0" />
+		<div class="numpad unit clearfix">
+			<a href="#" class="button"><span>1</span></a>
+			<a href="#" class="button"><span>2</span></a>
+			<a href="#" class="button"><span>3</span></a>
+			<a href="#" class="button"><span>4</span></a>
+			<a href="#" class="button"><span>5</span></a>
+			<a href="#" class="button"><span>6</span></a>
+			<a href="#" class="button"><span>7</span></a>
+			<a href="#" class="button"><span>8</span></a>
+			<a href="#" class="button"><span>9</span></a>
 		</div>
-		<div class="operations">
-			<a>+</a>
-			<a>-</a>
-			<a>*</a>
-			<a>/</a>
+		<div class="operations unit clearfix">
+			<a href="#" class="button"><span>+</span></a>
+			<a href="#" class="button"><span>-</span></a>
+			<a href="#" class="button"><span>*</span></a>
+			<a href="#" class="button"><span>/</span></a>
+			<a href="#" class="button"><span>C</span></a>
+			<a href="#" class="button"><span>=</span></a>
 		</div>
 	</div>
 
