Added the MathEngine. jsLinted.
Signed-off-by: J. Renée Beach <splendidnoise@gmail.com>

--- a/index.html
+++ b/index.html
@@ -25,6 +25,8 @@
 			<a href="#" class="button"><span>7</span></a>
 			<a href="#" class="button"><span>8</span></a>
 			<a href="#" class="button"><span>9</span></a>
+			<a href="#" class="button"><span>.</span></a>
+			<a href="#" class="button"><span>0</span></a>
 		</div>
 		<div class="operations unit clearfix">
 			<a href="#" class="button"><span>+</span></a>
