--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <title>CrunchCrunch Calculater</title>
 
   <!-- Application styles -->
-  <link rel="stylesheet" href="/assets/css/index.css">
+  <link rel="stylesheet" href="/assets/css/style.css">
 </head>
 
 <body>
