Making file references relative.
Signed-off-by: J. Renée Beach <splendidnoise@gmail.com>

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <title>CrunchCrunch Calculater</title>
 
   <!-- Application styles -->
-  <link rel="stylesheet" href="/assets/css/style.css">
+  <link rel="stylesheet" href="assets/css/style.css">
 </head>
 
 <body>
@@ -39,6 +39,6 @@
 	</div>
 
   <!-- Application source -->
-  <script data-main="/app/config" src="/assets/js/libs/require.js"></script>
+  <script data-main="app/config" src="assets/js/libs/require.js"></script>
 </body>
 </html>
