Added additional methods to the MathEngine to separate display from evaluation.
Signed-off-by: J. Renée Beach <splendidnoise@gmail.com>

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
   <!-- Main container -->
   <div class="calculator clearfix">
-		<input type="text" placeholder="0" />
+		<textarea placeholder="0" class="display"></textarea>
 		<div class="numpad unit clearfix">
 			<a href="#" class="button"><span>1</span></a>
 			<a href="#" class="button"><span>2</span></a>
@@ -29,6 +29,8 @@
 			<a href="#" class="button"><span>0</span></a>
 		</div>
 		<div class="operations unit clearfix">
+			<a href="#" class="button"><span>(</span></a>
+			<a href="#" class="button"><span>)</span></a>
 			<a href="#" class="button"><span>+</span></a>
 			<a href="#" class="button"><span>-</span></a>
 			<a href="#" class="button"><span>*</span></a>
