--- a/index.html
+++ b/index.html
@@ -14,30 +14,9 @@
 <body>
   <!-- Main container -->
   <div class="calculator clearfix">
-		<textarea placeholder="0" class="display"></textarea>
-		<div class="numpad unit clearfix">
-			<a href="#" class="button"><span>1</span></a>
-			<a href="#" class="button"><span>2</span></a>
-			<a href="#" class="button"><span>3</span></a>
-			<a href="#" class="button"><span>4</span></a>
-			<a href="#" class="button"><span>5</span></a>
-			<a href="#" class="button"><span>6</span></a>
-			<a href="#" class="button"><span>7</span></a>
-			<a href="#" class="button"><span>8</span></a>
-			<a href="#" class="button"><span>9</span></a>
-			<a href="#" class="button"><span>.</span></a>
-			<a href="#" class="button"><span>0</span></a>
-		</div>
-		<div class="operations unit clearfix">
-			<a href="#" class="button"><span>(</span></a>
-			<a href="#" class="button"><span>)</span></a>
-			<a href="#" class="button"><span>+</span></a>
-			<a href="#" class="button"><span>-</span></a>
-			<a href="#" class="button"><span>*</span></a>
-			<a href="#" class="button"><span>/</span></a>
-			<a href="#" class="button"><span>C</span></a>
-			<a href="#" class="button"><span>=</span></a>
-		</div>
+		<input placeholder="0" class="display"></input>
+		<div class="numpad unit clearfix"></div>
+		<div class="operations unit clearfix"></div>
 	</div>
 
   <!-- Application source -->
